fix services left spacing

--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,8 @@ input{
 
   .service__text {
     flex: 1;
+    margin-left: 2%;
+    margin-right: 8%;
   }
       .service__header {
         margin: auto auto 5px 5px;
@@ -381,6 +383,7 @@ input{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 5%;
   }
   .services__content {
     display: grid;
